Commit inicial da aplicação

--- a/saracurahc/src/main/resources/application.properties
+++ b/saracurahc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=classpath:/WEB-INF/jsp/
+spring.thymeleaf.suffix=.jsp
 
 spring.application.name=Bootstrap Spring Boot
 
