Adição de banco de dados local

--- a/saracurahc/src/main/resources/application.properties
+++ b/saracurahc/src/main/resources/application.properties
@@ -3,6 +3,17 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/WEB-INF/jsp/
 spring.thymeleaf.suffix=.jsp
 
-spring.application.name=Bootstrap Spring Boot
+spring.application.name=Sara Cura Health Care
 
 server.port=8080
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+## Datasource
+#spring.datasource.url=jdbc:h2:file:~/Documentos/UFMG/PM/TPFINAL-PM/saracurahc/src/main/resources/dbh2schc
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.hibernate.ddl-auto=update
