--- a/saracurahc/src/main/resources/application.properties
+++ b/saracurahc/src/main/resources/application.properties
@@ -13,7 +13,6 @@ spring.h2.console.path=/h2
 
 ## Datasource
 #spring.datasource.url=jdbc:h2:file:~/Documentos/UFMG/PM/TPFINAL-PM/saracurahc/src/main/resources/dbh2schc
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:db2schc
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=none
